fix: scrollbar style and routing issue

--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,28 @@
         font-feature-settings: 'rlig' 1, 'calt' 1;
     }
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #8f8f8f;
+    border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #7e7e7e;
+}
+
+html {
+    scrollbar-gutter: stable;
+}
